[package]
name = "basis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.8"
biblatex = "0.9" 
walkdir = "2"
tera = "1"
chrono = {version = "0.4", features = ["serde"]}
anyhow = "1"
typst-syntax = "0.13" # move to full typst crate eventually
sha2 = "0.10"